--- a/analysis/simulation_five_tissues_three_omics.Rmd
+++ b/analysis/simulation_five_tissues_three_omics.Rmd
@@ -351,13 +351,13 @@ plot_gene_PIPs <- function(results_dir, runtag,  simutags, thin, group_prior_var
 
 ## Simulation Parameters
 ```{r eval=FALSE}
-pve_gene <- c(0.02, 0.01, 0.003)
-group_size <- c(8170,13273,3479)
+pve_gene <- c(0.02, 0.02, 0, 0, 0, 0.01, 0.01, 0, 0, 0, 0.003, 0.003, 0, 0, 0)
+group_size <- c(8170,7395,8274,8561,9774, 13273, 14245, 15620, 19358, 24842, 3479, 1930, 2834, 3271, 4751)
 pve_snp <- 0.3
 sigma_theta <- 0.02
 sigma_beta <- 0.02
-gene_prior <- c(0.009175339,0.002823872,0.003232072)
-snp_prior <- 0.0002248876
+gene_prior <- c(0.009652920, 0.010664551, 0, 0, 0, 0.002970856, 0.002768142, 0, 0, 0, 0.003400303, 0.006129354, 0, 0, 0)
+snp_prior <- 0.0002365931
 ```
 
 
@@ -365,6 +365,7 @@ snp_prior <- 0.0002248876
 pve_gene <- c(0.02, 0.02, 0, 0, 0,
               0.01, 0.01, 0, 0, 0,
               0.003, 0.003, 0, 0, 0)
+
 group_size <- c(8170,7395,8274,8561,9774,
                 13273, 14245, 15620, 19358, 24842,
                 3479, 1930, 2834, 3271, 4751)
@@ -416,7 +417,7 @@ plot_PHE(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",
 ```
 
 ### Molecular level PIP
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=12, fig.height=4}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=4, fig.height=4}
 molecular_PIPs <- list()
 for(i in c(1)){
   print(i)
