--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -33,8 +33,18 @@ editor_options:
   * [cTWAS epigenetic analysis](ctwas_epigenetic_analysis.html)
 
 # Simulation results
+  * [Simulation results](simulation_summary.html)
+  * [Simulation null weight results](simulation_null_weight_summary.html)
+  * [Simulation Param PIPs](simulation_param_PIPs.html)
+  * [Simulation no enrichment](simulation_no_enrichment.html)
+  * [Simulation one tissue no enrichment](simulation_one_tissue_no_enrichment.html)
+  * [Simulation one tissue enrichment](simulation_one_tissue_enrichment.html)
   * [Simulation one tissue three omics](simulation_one_tissues_three_omics.html)
-  * [Simulation five uncorrelated tissues three omics](simulation_five_tissues_three_omics.html)
+  * [Simulation two tissues no enrichment](simulation_two_tissues_no_enrichment.html)
+  * [Simulation two tissues two omics enrichment](simulation_two_tissues_two_omics.html)
+  * [Simulation no enrichment four tissues combined](simulation_no_enrichment_four_tissues_combined.html)
+  * [Simulation pip calibration](simulation_pip_calibration.html)
+  
 
 # Real data application
 
@@ -60,6 +70,14 @@ Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue re
 
 * [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude_brainprocessed.html)
 * [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude_brainprocessed.html)
+
+
+
+### Multi group analysis results
+
+Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue removed from non-psychiatric traits
+
+* [sQTL](realdata_final_multigroup_summary.html)
 
 
 ## Omics
