--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -70,7 +70,7 @@ Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue re
 
 * [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude_brainprocessed.html)
 * [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude_brainprocessed.html)
-
+* [Summary](realdata_final_tissueselection_mingene0_summary.html)
 
 
 ### Multi group analysis results
@@ -166,8 +166,6 @@ Package V2.0
 
   * Test region merge [link](https://sq-96.github.io/multigroup_ctwas_analysis/region_merge_test.html)
 
-
-
 ## Downstream analysis
   
   * [20 traits](multi_group_downstream_analysis.html)
@@ -206,8 +204,6 @@ package v2.0
 * [Comparing different PIP combining functions](https://sq-96.github.io/multigroup_ctwas_analysis/compare_pip_func_LDL.html)
 * [New tissues comparing LD mismatch](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_newtissue_example.html)
 * [Downstream analysis, predictdb eQTL, sQTL, Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_silver_standard.html)
-
-
 
 
 
