--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -33,17 +33,9 @@ editor_options:
   * [cTWAS epigenetic analysis](ctwas_epigenetic_analysis.html)
 
 # Simulation results
-  * [Simulation results](simulation_summary.html)
-  * [Simulation null weight results](simulation_null_weight_summary.html)
-  * [Simulation Param PIPs](simulation_param_PIPs.html)
-  * [Simulation no enrichment](simulation_no_enrichment.html)
-  * [Simulation one tissue no enrichment](simulation_one_tissue_no_enrichment.html)
-  * [Simulation one tissue enrichment](simulation_one_tissue_enrichment.html)
+  * [Simulation five uncorrelated tissues three omics results](simulation_five_tissues_three_omics.html)
   * [Simulation one tissue three omics](simulation_one_tissues_three_omics.html)
-  * [Simulation two tissues no enrichment](simulation_two_tissues_no_enrichment.html)
   * [Simulation two tissues two omics enrichment](simulation_two_tissues_two_omics.html)
-  * [Simulation no enrichment four tissues combined](simulation_no_enrichment_four_tissues_combined.html)
-  * [Simulation pip calibration](simulation_pip_calibration.html)
   
 
 # Real data application
