--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -34,6 +34,7 @@ editor_options:
 
 # Simulation results
   * [Simulation five uncorrelated tissues three omics results](simulation_five_uncorrelated_tissues_three_omics.html)
+  * [Simulation five correlated brain tissues three omics results](simulation_five_correlated_brain_tissues_three_omics.html)
   * [Simulation one tissue three omics](simulation_one_tissues_three_omics.html)
   * [Simulation two tissues two omics enrichment](simulation_two_tissues_two_omics.html)
   
