--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -45,19 +45,9 @@ editor_options:
 
 ### Exploring genetic architecture
 
-[LDL, IBD: different qtl combination](realdata_final_combine_qtls.Rmd)
+[LDL, IBD: different qtl combination](realdata_final_combine_qtls.html)
 
 ### Tissue selection
-
-45 tissues jointly
-
-* [eQTL](realdata_final_tissueselection_mingene0.html)
-* [sQTL](realdata_final_tissueselection_mingene0_splicing.html)
-
-Tissue filtered by sample size, irrelevant tissues filtered out
-
-* [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude.html)
-* [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude.html)
 
 Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue removed from non-psychiatric traits
 
@@ -68,9 +58,13 @@ Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue re
 
 ### Multi group analysis results
 
-Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue removed from non-psychiatric traits
+Data analysis
 
-* [sQTL](realdata_final_multigroup_summary.html)
+* [Summary for parameters, number of genes in single/multigroup analysis, heatmap for new genes](realdata_final_multigroup_summary.html)
+
+Enrichment analysis
+
+* [Comparing enriched terms found by fractional model/enrichR for multigroup&singlegroup](realdata_final_downstream_enrichment_compare.html)
 
 
 ## Omics
@@ -107,6 +101,18 @@ Package V2.0
   * [Deciding the matching tissue -- run ctwas using all tissues, round1](https://sq-96.github.io/multigroup_ctwas_analysis/real_data_all_tissues.html)
   * [Deciding the matching tissue -- run ctwas using all tissues, G-tests](https://sq-96.github.io/multigroup_ctwas_analysis/GWAS_tissue_selection.html)
   * [Deciding the matching tissue -- run ctwas using all tissues, G-tests, scatter plots added](https://sq-96.github.io/multigroup_ctwas_analysis/GWAS_tissue_selection_v2.html)
+
+Finalized package
+
+45 tissues jointly
+
+* [eQTL](realdata_final_tissueselection_mingene0.html)
+* [sQTL](realdata_final_tissueselection_mingene0_splicing.html)
+
+Tissue filtered by sample size, irrelevant tissues filtered out
+
+* [eQTL - some tissues removed](realdata_final_tissueselection_mingene0_exclude.html)
+* [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude.html)
 
 ### Multi-tissue 
 
