--- a/analysis/simulation_five_uncorrelated_tissues_three_omics.Rmd
+++ b/analysis/simulation_five_uncorrelated_tissues_three_omics.Rmd
@@ -283,6 +283,60 @@ plot_PHE <- function(results_dir, runtag, simutags, thins, group_prior_var_struc
   }
 }
 
+plot_single_PHE <- function(results_dir, runtag_list, thins, PHE_true) {
+  plots <- list()  # Store plots in a list
+  plot_idx <- 1
+  
+  for (thin in thins) {
+    PHE_list <- list()
+    for(i in runtag_list){
+      for(j in 1:10){
+        param_df_ctwas <- readRDS(paste0(results_dir,i,"_simu1-",j,".thin1.shared_all.ctwas.minp08.mingene0.parameters.RDS"))
+        PHE_list[[i]] <- c(PHE_list[[i]],param_df_ctwas$prop_heritability[1])
+      }
+    }
+      
+    df <- data.frame(null_method = rep(c("blood E",  "Liver E",  "Heart E",  "Stomach E",  "Lung E",
+                                         "blood S",  "Liver S",  "Heart S",  "Stomach S",  "Lung S",
+                                         "blood ST", "Liver ST", "Heart ST", "Stomach ST", "Lung ST"), each = 10),
+                       pos = c(rep(1, 10), rep(2, 10), rep(3, 10), rep(4, 10), rep(5, 10), 
+                               rep(6, 10), rep(7, 10), rep(8, 10), rep(9, 10), rep(10, 10),
+                               rep(11, 10), rep(12, 10), rep(13, 10), rep(14, 10), rep(15, 10)),
+                       phe = unlist(PHE_list)) 
+      
+    df$pos <- jitter(df$pos, amount = 0.2)
+    
+    # Prepare hline data: start and end x for each group
+    hline_df <- data.frame(
+      pos = 1:15,
+      yintercept = PHE_true
+    )
+      
+    p <- ggplot(df, aes(x = pos, y = phe, group = null_method, color = null_method)) +
+        geom_point() +
+        geom_segment(data = hline_df,
+                 aes(x = pos - 0.3, xend = pos + 0.3, 
+                     y = yintercept, yend = yintercept),
+                 linetype = "dashed", inherit.aes = FALSE) +
+        labs(x = "", y = "PHE", title = thin) +
+        scale_x_continuous(breaks = 1:15, labels = c("blood E",  "Liver E",  "Heart E",  "Stomach E",  "Lung E",
+                                         "blood S",  "Liver S",  "Heart S",  "Stomach S",  "Lung S",
+                                         "blood ST", "Liver ST", "Heart ST", "Stomach ST", "Lung ST")) +
+        ylim(c(0,0.15)) +
+        theme_minimal()+
+        theme(legend.position = "none")
+      
+    plots[[plot_idx]] <- p  # Store plot in the list
+    plot_idx <- plot_idx + 1
+  }
+  
+  if (length(plots) > 1) {
+    grid.arrange(grobs = plots, ncol = length(plots))  # Using gridExtra
+  } else {
+    print(plots[[1]])
+  }
+}
+
 plot_power <- function(results_dir,runtag,thins){
   plots <- list()  # Store plots in a list
   plot_idx <- 1
@@ -1025,6 +1079,15 @@ plot_PVE(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_uncorrelated_tissues_three_omics/"
 runtag = "five_uncorrelated_tissues_three_omics"
 plot_PHE(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",phe_true)
+```
+
+## Inflated single group PHE
+```{r,echo=FALSE,fig.width= 12, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_uncorrelated_tissues_three_omics/"
+runtag_list <- c(paste0(c("Whole_Blood","Liver","Heart_Left_Ventricle","Stomach","Lung"),"_expression"),
+                  paste0(c("Whole_Blood","Liver","Heart_Left_Ventricle","Stomach","Lung"),"_splicing"),
+                 paste0(c("Whole_Blood","Liver","Heart_Left_Ventricle","Stomach","Lung"),"_stability"))
+plot_single_PHE(results_dir,runtag_list,c(1),phe_true)
 ```
 
 ## Molecular level PIP
